--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,23 @@
 body
 {
-    color:darkgreen;
-    text-align: center;
+    color: #333;
+    text-align: center; 
     font-family: Arial;
+    font-size: 16px;
+    margin: auto;
+    padding: auto;
+
+}
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: auto;
+}
+#container h1
+{
+    font-size: 30px;
+
 }
