--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,16 +8,39 @@ body
     padding: auto;
 
 }
+#cabecera 
+{
+    background: rgb(17, 17, 80);
+    color: white;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+    box-shadow: -21px -10px 37px 15px rgba(74,94,130,0.77);
+}
+#cabecera #tangline
+{
+    padding: 0 0 0 1em;
+    font-size: 0.8em;
+    font-weight:normal;
+
+}
 #container
 {
     width: 70%;
     padding: 1em;
     text-align: left;
-    border: 1px solid #DDD;
+    border: 1px solid #DDD; 
     margin: auto;
 }
 #container h1
 {
     font-size: 30px;
+
+}
+#post:
+{
+    padding: 1em;
 
 }
